--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -96,21 +96,17 @@ h1 {
 .sideBarLink {
   cursor: pointer; }
 
-#design_controls {
-  vertical-align: top;
-  display: inline-block;
+#mechSelector {
+  color: white;
+  display: none;
+  position: absolute;
+  left: 15%;
+  top: 70px;
   width: 300px;
-  height: 100%; }
+  height: 80%;
+  background-color: black; }
 
-#design_mechview {
-  color: black;
-  background-image: url("../images/emptymech.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 100% 100%;
-  display: inline-block;
-  height: 100%;
-  width: 550px;
-  background-color: blue; }
+.showHide {
+  display: inline-block; }
 
 /*# sourceMappingURL=style.css.map */
