--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -111,19 +111,15 @@ h1
   @extend %noselect
   cursor:  pointer
   
-#design_controls
-  vertical-align: top
-  display: inline-block
+#mechSelector
+  color: white
+  display: none
+  position: absolute
+  left: 15%
+  top: 70px
   width: 300px
-  height: 100%
+  height: 80%
+  background-color: black
   
-#design_mechview
-  color: black;
-  background-image: $design_mechview_bg
-  background-repeat: no-repeat
-  background-position: center
-  background-size: 100% 100%
+.showHide
   display: inline-block
-  height: 100%
-  width: 550px
-  background-color: blue
