--- a/views/sideBar.jade
+++ b/views/sideBar.jade
@@ -1,4 +1,4 @@
 block sideBar
-  a(id="link_0" class="sideBarLink") link1
+  a(id="link_0" class="sideBarLink") Select a Mech
   a(id="link_1" class="sideBarLink") link2
   a(id="link_2" class="sideBarLink") link3
