--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,10 @@
   width: 85%;
   display: inline-block; }
 
+#mechArmorDiagram {
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px; }
+
 .sideBarLink {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -105,6 +109,15 @@ h1 {
   width: 300px;
   height: 80%;
   background-color: black; }
+
+#mechArmorDiagram {
+  display: inline-block;
+  width: 85%;
+  height: 79%;
+  background-image: url("../images/emptymech.jpg");
+  background-repeat: no-repeat;
+  background-position: 300px center;
+  background-size: 50% 100%; }
 
 .showHide {
   display: inline-block; }
