--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -14,6 +14,10 @@ $design_mechview_bg: url('../images/emptymech.jpg')
   width: 85%
   display: inline-block
   
+%noBorder
+  margin: 0px 0px 0px 0px
+  padding: 0px 0px 0px 0px
+  
 %noselect
   -webkit-touch-callout: none
   -webkit-user-select: none
@@ -120,6 +124,16 @@ h1
   width: 300px
   height: 80%
   background-color: black
+  
+#mechArmorDiagram
+  display: inline-block
+  @extend %noBorder
+  width: 85%
+  height: 79%
+  background-image: $design_mechview_bg
+  background-repeat: no-repeat
+  background-position: 300px center
+  background-size: 50% 100%
   
 .showHide
   display: inline-block
