--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -110,14 +110,28 @@ h1 {
   height: 80%;
   background-color: black; }
 
+#mechDetails {
+  display: inline-block;
+  vertical-align: top;
+  left: 15%;
+  top: 70px;
+  width: 300px;
+  height: 79%; }
+  #mechDetails h2 {
+    margin-bottom: 5px;
+    margin-top: 5px; }
+
+#mechDetails_Name {
+  text-align: center; }
+
 #mechArmorDiagram {
   display: inline-block;
-  width: 85%;
+  width: calc(85% - 300px);
   height: 79%;
   background-image: url("../images/emptymech.jpg");
   background-repeat: no-repeat;
-  background-position: 300px center;
-  background-size: 50% 100%; }
+  background-position: 300px left;
+  background-size: 70% 100%; }
 
 .showHide {
   display: inline-block; }
