--- a/views/design.jade
+++ b/views/design.jade
@@ -15,10 +15,25 @@ block mainContent
       -}
       
   div(id="mechDetails")
-    h2(id="mechDetails_Name")
-    p(id="mechDetails_Weight")
-    p(id="mechDetails_Speed")
-    p(id="mechDetails_PriWeapon")
+    input(id="mechDetails_oid" name="_id")
+    div
+      p(id="mechDetails_Name_label") Mech Name:
+      input(id="mechDetails_Name" name="mechName")
+    div
+      p(class="inlineLabel") Weight: 
+      p(id="mechDetails_Weight" name="weight")
+      input(id="mechDetails_Weight_Up" class="stat_Change" type="button")
+      input(id="mechDetails_Weight_Down" class="stat_Change" type="button")
+    div
+      p(class="inlineLabel") Speed: 
+      p(id="mechDetails_Speed" name="speed")
+      input(id="mechDetails_Speed_Up" class="stat_Change" type="button")
+      input(id="mechDetails_Speed_Down" class="stat_Change" type="button")
+    div(id="mechSave_Submit_Div")
+      input(id="mechDetails_save" type="button" value="Save Mech")
+    
+  div(id="mechArmorSections")
+    div(id="mechArmorHead")
     
   div(id="mechArmorDiagram")
 
