Added ability to load and save different mechs. Added functions to change mech characteristics. Added ability to delete mechs.

--- a/views/design.jade
+++ b/views/design.jade
@@ -31,6 +31,7 @@ block mainContent
       input(id="mechDetails_Speed_Down" class="stat_Change" type="button")
     div(id="mechSave_Submit_Div")
       input(id="mechDetails_save" type="button" value="Save Mech")
+      input(id="mechDetails_delete" type="button" value="Delete Mech")
     
   div(id="mechArmorSections")
     div(id="mechArmorHead")
