--- a/views/header.jade
+++ b/views/header.jade
@@ -1,4 +1,8 @@
 block header
+  div(id="welcomeSec")
+    div(id="welcomeHideShow")
+      p.welcomeStr #{welcomeSec}
+      button(id="logout") Logout
   div(id="linkBar")
     a(href="/", class="headerLink") Home Page
     a(href="/design", class="headerLink") Design
