--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,5 +15,8 @@ html
       
     block mainContent
     
+    div(id="registerBox")
+      block register
+    
     div(id="footer")
       block footer
