Added custom mechs that are accessible by each logged in user. Added ability to view base mechs and save as users custom mechs

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -127,7 +127,8 @@ h1
   @extend %noselect
   cursor:  pointer
   
-#mechSelector
+#mechBaseSelector, #mechCustomSelector
+  display: none;
   color: white
   display: none
   position: absolute
