--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -112,7 +112,8 @@ h1 {
 .sideBarLink {
   cursor: pointer; }
 
-#mechSelector {
+#mechBaseSelector, #mechCustomSelector {
+  display: none;
   color: white;
   display: none;
   position: absolute;
