--- a/views/design.jade
+++ b/views/design.jade
@@ -7,8 +7,15 @@ block sideBar
   include sideBar
 
 block mainContent
-  div(id="mechSelector")
+  div(id="mechBaseSelector")
     each mech in mechs
+      -if (typeof(mech.mechName) != 'undefined') {
+      a(href="#" id=mech._id class="selectMech")= mech.mechName
+      p Speed: #{mech.speed} Weight: #{mech.weight} Primary Weapon: #{mech.weapon1}
+      -}
+      
+  div(id="mechCustomSelector")
+    each mech in customMechs
       -if (typeof(mech.mechName) != 'undefined') {
       a(href="#" id=mech._id class="selectMech")= mech.mechName
       p Speed: #{mech.speed} Weight: #{mech.weight} Primary Weapon: #{mech.weapon1}
@@ -37,6 +44,9 @@ block mainContent
     div(id="mechArmorHead")
     
   div(id="mechArmorDiagram")
+  
+block register
+  include register
 
 block footer
   include footer
