Updated development with recent changes.

--- a/views/header.jade
+++ b/views/header.jade
@@ -4,7 +4,7 @@ block header
       p.welcomeStr #{welcomeSec}
       button(id="logout") Logout
   div(id="linkBar")
-    a(href="/", class="headerLink") Home Page
-    a(href="/design", class="headerLink") Design
+    a(href="/", class="headerLink #{link1class}") Home Page
+    a(href="/design", class="headerLink #{link2class}") Design
     a(href="/about", class="headerLink") About
     a(href="http://www.camospecs.com", class="headerLink") CamoSpecs
