--- a/views/index.jade
+++ b/views/index.jade
@@ -10,8 +10,8 @@ block sideBar
 block mainContent
   div(id="mainContent")
     h1.indexTitle= title
-    p.quoteOfDay Quote: #{quote}
     div(id="madCatLogo")
+    p.quoteOfDay #{quote}
     
 block register
   include register
