--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-#mainContent, #madCatLogo, #mainContent_design {
+#madCatLogo, #mainContent_design {
   height: 80%;
   width: 85%;
   display: inline-block; }
@@ -26,61 +26,88 @@ h1 {
 
 #header {
   width: 100%;
-  background: black;
+  background: linear-gradient(#4d4d4d, #262626);
   color: white;
-  height: 70px; }
+  height: 100px; }
 
 #linkBar {
   display: inline-block;
   position: absolute;
   background: grey;
   width: auto;
-  height: 50px;
-  margin: 10px 0px 10px 0px;
-  padding: 0px 0px 0px 0px; }
+  height: 90px;
+  margin: 5px 0px 5px 0px;
+  padding: 0px 0px 0px 0px;
+  border-radius: 3px; }
   #linkBar a {
+    text-shadow: -1px -1px 0 #000, 0px 0px 0 #000, 0px 0px 0 #000, 0px 0px 0 #000;
+    background: linear-gradient(grey, #b3b3b3);
+    display: inline-block;
+    position: relative;
     text-decoration: none;
-    color: white;
     font-size: 22px;
-    margin: 14px 10px 14px 10px;
     padding: 0px 0px 0px 0px;
     white-space: nowrap;
-    overflow: hidden; }
+    border: 2px solid #e6e6e6;
+    overflow: hidden;
+    border-radius: 5px;
+    top: 16%;
+    height: 48%;
+    vertical-align: center;
+    padding-top: 3%;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-weight: bold;
+    color: white; }
+  #linkBar :last-child {
+    margin-right: 10px; }
+  #linkBar :first-child {
+    margin-left: 10px; }
+
+.linkHighlight {
+  color: #D65C33 !important; }
 
 #sideBar {
+  min-height: 700px;
   vertical-align: top;
   height: 80%;
   width: 15%;
-  background: grey;
+  background: linear-gradient(to right, grey, #4d4d4d);
   color: red;
   display: inline-block; }
   #sideBar a {
     display: block; }
 
 #mainContent {
+  height: 80%;
+  width: 85%;
+  display: inline-block;
+  min-height: 700px;
   background-image: url("../images/bg5.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100% 100%; }
   #mainContent h1 {
-    margin-right: 10px;
-    display: inline-block; }
+    display: block;
+    text-align: center; }
   #mainContent p {
-    position: absolute;
-    display: inline-block;
+    display: block;
     white-space: nowrap;
-    overflow: hidden; }
+    overflow: hidden;
+    text-align: center; }
 
 .quoteOfDay, .indexTitle {
   color: white;
   vertical-align: top; }
 
 #madCatLogo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   background-image: url("../images/madcatblueprint.jpg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 60% 80%;
-  clear: both; }
+  background-size: 60% 80%; }
 
 #mainContent_design {
   color: white;
@@ -101,13 +128,14 @@ h1 {
   vertical-align: top;
   display: block;
   clear: both;
-  height: 10%;
+  height: 100px;
   width: 100%;
-  background: black;
+  background: linear-gradient(#262626, #4d4d4d);
   text-align: right;
   color: white; }
   #footer p {
-    margin: 0px 0px 0px 0px; }
+    padding-top: 40px;
+    margin: 0px 50px 0px 0px; }
 
 .sideBarLink {
   cursor: pointer; }
@@ -244,9 +272,10 @@ h1 {
   margin: 10px 0px 10px 0px;
   max-width: 15%;
   min-width: 15%;
-  height: 50px;
+  height: 80px;
   color: white;
-  text-align: center; }
+  text-align: center;
+  padding-top: 14px; }
 
 #welcomeHideShow {
   display: none; }
