--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,12 +1,10 @@
 $mainContent-back-img: url('../images/madcatblueprint.jpg')
-
 $other-back-img: url('../images/bg5.jpg')
-
 $design_mechview_bg: url('../images/emptymech.jpg')
 
 @mixin vertical-align
   position: relative
-  top 50%
+  top: 50%
   -webkit-transform: translateY(50%)
 
 %mainContent_prop
@@ -155,7 +153,7 @@ h1
   cursor:  pointer
   
 #mechBaseSelector, #mechCustomSelector
-  display: none;
+  display: none
   color: white
   display: none
   position: absolute
@@ -192,7 +190,7 @@ h1
     text-align: center
     width: 14%
     height: 11%
-    background-color: rgba(255, 0, 0, 0.4);
+    background-color: rgba(255, 0, 0, 0.4)
     margin-left: auto
     margin-right: auto
     margin-top: 10%
