--- a/views/sideBar.pug
+++ b/views/sideBar.pug
@@ -1,6 +1,6 @@
 block sideBar
   block login
-    include login
+    include login.pug
   a(id="link_0" class="sideBarLink") Select Base Mech
   a(id="link_1" class="sideBarLink") Select Custom Mech
   a(id="link_2" class="sideBarLink") link3
