Added news pug file. Still need to convert to sass and add to other pages

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,7 @@ block header
 block sideBar  
   block login
     include login.pug
+    include news.pug
 
 block mainContent
   div(id="mainContent")
