--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,6 +71,33 @@ h1 {
   height: 100px;
 }
 
+.expandableLink {
+  position: relative;
+  display: inline-block;
+}
+.expandableLink .headerLinkExpand {
+  display: block;
+}
+.expandableLink .slider {
+  display: table-cell;
+  position: relative;
+  left: 25px;
+  top: 100%;
+  left: 0;
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.expandableLink .slider a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.expandableLink .slider a:hover {
+  background-color: orange;
+}
+
 #linkBar {
   display: inline-block;
   position: absolute;
@@ -79,9 +106,9 @@ h1 {
   height: 90px;
   margin: 5px 0px 5px 0px;
   padding: 0px 0px 0px 0px;
-  border-radius: 3px;
+  border-radius: 5px;
 }
-#linkBar a {
+#linkBar div {
   text-shadow: -1px -1px 0 #000, 0px 0px 0 #000, 0px 0px 0 #000, 0px 0px 0 #000;
   background: linear-gradient(grey, #b3b3b3);
   display: inline-block;
@@ -91,22 +118,37 @@ h1 {
   padding: 0px 0px 0px 0px;
   white-space: nowrap;
   border: 2px solid #e6e6e6;
-  overflow: hidden;
   border-radius: 5px;
   top: 16%;
   height: 48%;
-  vertical-align: center;
+  vertical-align: top;
   padding-top: 3%;
   padding-left: 10px;
   padding-right: 10px;
   font-weight: bold;
   color: white;
+  text-align: center;
+  width: 125px;
 }
-#linkBar :last-child {
+#linkBar > :last-child {
   margin-right: 10px;
 }
-#linkBar :first-child {
+#linkBar > :first-child {
   margin-left: 10px;
+}
+#linkBar a {
+  color: white;
+  vertical-align: middle;
+  text-decoration: initial;
+}
+#linkBar .slider {
+  height: 0px;
+  overflow: hidden;
+  padding: 0px;
+  border: 0px;
+  width: auto;
+  position: relative;
+  left: -20px;
 }
 
 .linkHighlight {
