Got some initial styling setup. Still a lot to go

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -151,10 +151,76 @@ h1
   height: 80%
   width: 15%
   background: linear-gradient(to right, grey, #4d4d4d)
-  color: red
+  color: lightslategray
   display: inline-block
   a
     display: block
+
+#mechsideBar
+  text-align: center
+  width: 200px
+  clear: both
+  margin: auto
+
+.selector
+  margin-top: 30px
+  margin-left: 8px
+  background-color: white
+  text-align: center
+  border: 2px solid black
+  border-radius: 5px
+  width: 180px
+  font-size: 12px
+  font-weight: bold
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif
+  color: black
+
+.popoutClass
+  display: none
+  position: absolute
+  border: 6px solid black
+  border-radius: 5px
+  z-index: 100
+  background: grey
+  top: -185px
+  color: white
+  font-size: 25px
+  padding-top: 10px
+  text-align: center
+
+.popoutTab
+  width: 700px
+  margin-left: 200px
+  margin-top: 315px
+  height: 500px
+
+.popoutTab2
+  background-image: url('../images/mechArmor5.jpg')
+  background-size: 290px 500px
+  background-position: center center
+  background-repeat: no-repeat
+  width: 340px
+  margin-left: 201px
+  margin-top: 315px
+  height: 590px
+
+.popoutTab3
+  width: 700px
+  margin-left: 200px
+  margin-top: 315px
+  height: 500px
+
+.popoutTab4
+  width: 700px
+  margin-left: 200px
+  margin-top: 315px
+  height: 500px
+
+.highlighted2
+  background-color: #F9EDBE
+  box-shadow: 6px 6px 5px black
+  outline-color: blue
+  cursor: pointer
 
 #mainContent
   height: 80%
