--- a/views/sideBar.pug
+++ b/views/sideBar.pug
@@ -1,6 +1,14 @@
 block sideBar
   block login
     include login.pug
-  a(id="link_0" class="sideBarLink") Select Base Mech
-  a(id="link_1" class="sideBarLink") Select Custom Mech
-  a(id="link_2" class="sideBarLink") link3
+  div(id="mechsideBar")
+    p.selector(id="mechSelector" onclick="pickMechs()") Select a different mech
+    div.popoutClass.popoutTab
+
+    p.selector(id="armorSelector") Armor
+    div.popoutClass.popoutTab2
+
+    p.selector(id="weaponSelector") Weapons/Criticals
+    div.popoutClass.popoutTab3
+
+    p.selector(id="criticalSelector") Save Mech
