--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -49,6 +49,8 @@ $design_mechview_bg: url('../images/emptymech.jpg')
     display: flex /* Use flexbox to align the icon and text */
     align-items: center
     margin-bottom: 10px /* Add some space between news items */
+    padding-left: 10px
+    padding-right: 10px
 
   #newsIcons
     margin-right: 10px /* Add some space between the icon and the text */
@@ -57,7 +59,7 @@ $design_mechview_bg: url('../images/emptymech.jpg')
   color: white /* White text color for the news content */
 
 html, body
-  background: lightgrey
+  background: dimgrey
   margin: 0px 0px 0px 0px
   height: 100%
 
@@ -98,10 +100,9 @@ h1
 #linkBar
   display: inline-block
   position: absolute
-  background: grey
   width: auto
   height: 90px
-  margin: 5px 0px 5px 0px
+  margin: 2px 0px 5px 1%
   padding: 0px 0px 0px 0px
   border-radius: 5px
   div
@@ -113,7 +114,7 @@ h1
     font-size: 22px
     padding: 0px 0px 0px 0px
     white-space: nowrap
-    border: 2px solid #e6e6e6
+    border: 2px solid goldenrod
     border-radius: 5px
     top: 16%
     height: 48%
@@ -125,6 +126,7 @@ h1
     color: white
     text-align: center
     width: 125px
+    margin-right: 5px
   > :last-child
     margin-right: 10px
   > :first-child
@@ -150,7 +152,7 @@ h1
   vertical-align: top
   height: 80%
   width: 15%
-  background: linear-gradient(to right, grey, #4d4d4d)
+  background: linear-gradient(to right, goldenrod -50%, #D65C33 70%)
   color: lightslategray
   display: inline-block
   a
@@ -161,6 +163,7 @@ h1
   width: 200px
   clear: both
   margin: auto
+  margin-top: 52px
 
 .selector
   margin-top: 30px
@@ -408,6 +411,7 @@ h1
   
 #loginBox
   display: none
+  margin-top: 20px
   
 #loginButtons
   margin-top: 5px
@@ -424,13 +428,19 @@ h1
   
 #welcomeSec
   display: inline-block
-  margin: 10px 0px 10px 0px
+  margin: 0px 0px 10px 0px
   max-width: 15%
   min-width: 15%
   height: 80px
   color: white
   text-align: center
   padding-top: 14px
+  background-image: url('../images/btLogoFinalFinal.jpg')
+  background-position: center
+  background-size: 100%
+  background-repeat: no-repeat
+  background-blend-mode: soft-light
+  background-color: transparent
   
 #welcomeHideShow
   display: none
