--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -260,6 +260,12 @@ h1
     white-space: nowrap
     overflow: hidden
     text-align: center
+
+.mechPickTable
+  font-size: 15px
+  width: 695px
+  a
+    color: white
       
 .quoteOfDay, .indexTitle
   color: white
