--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -23,7 +23,8 @@ $design_mechview_bg: url('../images/emptymech.jpg')
   right: 0px
   left: max(15%, 200px)
   display: inline-block
-  min-height: 700px
+  min-height: 670px
+  padding: 15px
   
 %noBorder
   margin: 0px 0px 0px 0px
@@ -328,6 +329,15 @@ h1
   width: 300px
   height: 80%
   background-color: black
+
+#mechHeader 
+  display: inline-block
+  vertical-align: top
+  width: 315px
+  margin-right: 5px
+  padding: 5px
+  background: linear-gradient(to right, #79796b, #adad99)
+  height: 650px
   
 #mechDetails
   display: inline-block
